# Praktika

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  start
.github/workflows/: build.yml
rpc/: Praktika_Api.h  Praktika_Api.idl  Praktika_Api_c.c  Praktika_Api_s.c  Praktika_Stop.h  Praktika_Stop.idl  Praktika_Stop_c.c  Praktika_Stop_s.c  midl_user.c
scripts/: gen_midl.bat
src/: api_client.cpp  api_client.h  app_config.h  main.cpp  service_check.cpp  service_check.h  service_client.cpp  service_client.h
src/service/: PraktikaService.cpp  auth_manager.cpp  auth_manager.h  av_database.cpp  av_database.h  av_storage.cpp  av_storage.h  http_client.cpp  http_client.h  json_parser.cpp  json_parser.h  license_manager.cpp  license_manager.h  scan_engine.cpp  scan_engine.h
